syntax = "proto3";
package pb;
option go_package="./pb";

message Profile {
    uint64 id=1;
    string user_name=2;
}

message PostProfileRequest {
    string user_name=1;
}

message PostProfileResponse {
    Profile profile=1;
}

message GetProfileRequest {
    uint64 id=1;
}

message GetProfileResponse {
    Profile profile=1;
}

message GetAllProfilesRequest{    
}

message GetAllProfilesResponse{    
    repeated Profile profile=1;
}

service ProfileService{
    rpc PostProfile(PostProfileRequest) returns (PostProfileResponse){}
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse){}
    rpc GetAllProfiles(GetAllProfilesRequest) returns (GetAllProfilesResponse){}
}